--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="banner"></div>
-  <h1>PROUT</h1>
+  <div class="banner">
+    <div class="banner-content">
+      <h1><img src="images/logo.png" alt="logo Biobelle" height="85px"></h1>
+      <p >Prend une pause</p>
+      <p >Pour nous joindre, écrivez-nous</p>
+      <a href="mailto:info@biobelle.ca?subject=J%27ai%20une%20petite%20question..."><i class="far fa-envelope"></i></a>
+    </div>
+    <div id="flower"></div>
+  </div>
 </body>
 </html>
