--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="banner">
-    <div class="banner-content">
-      <h1><img src="images/logo.png" alt="logo Biobelle" height="85px"></h1>
-      <p >Prend une pause</p>
-      <p >Pour nous joindre, écrivez-nous</p>
-      <a href="mailto:info@biobelle.ca?subject=J%27ai%20une%20petite%20question..."><i class="far fa-envelope"></i></a>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="banner">
+      <div class="banner-content">
+        <h1><img src="images/logo.png" alt="logo Biobelle" height="95px"></h1>
+        <p>Prend une pause</p>
+        <p>Pour nous joindre, écrivez-nous</p>
+        <a href="mailto:annie@biobelle.ca?subject=J%27ai%20une%20petite%20question..."><i class="far fa-envelope"></i></a>
+      </div>
+      <div id="flower"></div>
     </div>
-    <div id="flower"></div>
-  </div>
-</body>
+  </body>
 </html>
